--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!--SUPER BOMBERMAN -->
 
 	<div class="direita1">
-	<a href="paginas/bomberman.html">
+	<a href="paginas/Bomberman.html">
 	<img src="imagens/bomberman.jpg">
 	<p>Super Bomerman</p></a></div>
 
